--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "formidable": "^3.5.1",
+    "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
     "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
