--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@google/generative-ai": "^0.1.3",
     "@mui/material": "^6.1.6",
     "@mui/x-data-grid": "^6.18.4",
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.5.1",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
+    "cookie-universal": "^2.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -32,6 +34,7 @@
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
     "jimp": "^0.22.12",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "multer": "1.4.5-lts.1",
@@ -40,8 +43,11 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-type-animation": "^3.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-persist-cookie-storage": "^1.0.0",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
