--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development PORT=4008 nodemon server/index.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server/index.js",
+    "start": "NODE_ENV=production PORT=4000 node server/index.js",
     "stage": "NODE_ENV=production PORT=4000 node server/index.js",
     "prod:dev": "NODE_ENV=production PORT=4001 node server/index.js",
     "lint": "next lint"
@@ -18,7 +18,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@google/generative-ai": "^0.1.3",
-    "@mui/material": "^6.1.6",
+    "@mui/material": "^5.4.1",
     "@mui/x-data-grid": "^6.18.4",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
