--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@google/generative-ai": "^0.1.3",
+    "@mui/lab": "6.0.0-beta.21",
     "@mui/material": "^6.1.6",
     "@mui/x-data-grid": "^6.18.4",
     "axios": "^1.5.1",
@@ -40,11 +41,14 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
     "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "useragent": "^2.3.0"
+    "swiper": "^11.1.15",
+    "useragent": "^2.3.0",
+    "ytdl-core": "^4.11.5"
   }
 }
